feat: add login and register modals

--- a/templates/partials/_head.html
+++ b/templates/partials/_head.html
@@ -12,9 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
         rel="stylesheet">
     <!-- Styles -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="/static/js/modals.js" defer></script>
     <script>
         tailwind.config = {
             theme: {
