--- a/apps/events/templates/events/create_event.html
+++ b/apps/events/templates/events/create_event.html
@@ -77,7 +77,7 @@
                             {{ form.description }}
                             <div class="text-xs text-gray-500 mt-2 flex justify-between">
                                 <span>Descreva seu evento de forma clara e atraente</span>
-                                <span id="charCount">0</span>/300 caracteres
+                                <div><span id="charCount">0</span>/300 caracteres</div>
                             </div>
                             {% if form.description.errors %}
                             <div class="text-sm text-red-600 mt-2">
